prevent navbar from wrapping

--- a/react-app/src/components/CSS/NavBar.css
+++ b/react-app/src/components/CSS/NavBar.css
@@ -117,6 +117,7 @@ NavLink {
 .navBar-feature {
   padding: 0.5rem 0 1rem;
   margin: 0 1.3rem;
+  white-space: nowrap;
 }
 
 .navBar-feature:hover {
